--- a/main.html
+++ b/main.html
@@ -3,10 +3,43 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+	<meta name ="viewport"content="width-device-width"initial-scale=1.0>
+	<title>Dog Adoption Application</title>
 	<link rel="stylesheet" href="styles.css">
-</head>
-
+	</head>
 <body>
+<form>
+	<h1>Dog Adoption Application</h1>
+	<form method=action>
+		<label>Name:</label>
+		<input id="Name" name="name" placeholder=name">
+		<br><br>
+		<label>Phone Number:</label>
+		<input id="Phone Number" name="Phone" placeholder="Phone number">
+		<br><br>
+		<label>Address:</label>
+		<input id="address" name="adress" placeholder="Address">
+		<br><br>
+		<label>Have you ever lived with a Dog before?</label>
+		<input id="checkbox" type="Checkbox">
+				<br><br>
+
+		<label>Please select your preferred breeds</label>
+				<br><br>
+		<label>lab</label>
+		<input id="checkbox" type="Checkbox">
+		
+		<label>Golden retriever</label>
+		<input id="checkbox" type="Checkbox">
+		<label>pug</label>
+		<input id="checkbox" type="Checkbox">
+				<br><br>
+
+<button>Submit</button>
+		
+
+</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
