--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
 	<h1>Dog Adoption Application</h1>
 	<form method=action>
 		<label>Name:</label>
-		<input id="Name" name="name" placeholder=name">
+		<input id="Name" placeholder="name"type="text">
 		<br><br>
 		<label>Phone Number:</label>
-		<input id="Phone Number" name="Phone" placeholder="Phone number">
+		<input id="Phone Number" placeholder="Phone number""type="text">
 		<br><br>
 		<label>Address:</label>
-		<input id="address" name="adress" placeholder="Address">
+		<input id="address" placeholder="Address""type="text">
 		<br><br>
 		<label>Have you ever lived with a Dog before?</label>
 		<input id="checkbox" type="Checkbox">
@@ -35,9 +35,7 @@
 		<label>pug</label>
 		<input id="checkbox" type="Checkbox">
 				<br><br>
-
-<button>Submit</button>
-		
+			<input id="Submit" type="submit" value="submit">
 
 </form>
 	<!-- the entire body must be written by student -->
