--- a/main.html
+++ b/main.html
@@ -34,6 +34,7 @@
             color: #555;
         }
         input[type="text"],
+        input[type="tel"],
         select {
             width: 100%;
             padding: 10px;
@@ -68,7 +69,7 @@
         <input type="text" id="name" name="name" placeholder="Name" required>
 
         <label for="phone">Phone Number</label>
-        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+        <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
 
         <label for="address">Address</label>
         <input type="text" id="address" name="address" placeholder="Address" required>
