--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 
-    <form action="#" method="post">
+    <form id="dogAdoptionForm">
         <h2>Dog Adoption Application</h2>
 
         <label for="name">Name</label>
